trying to fix tests

--- a/build.gradle
+++ b/build.gradle
@@ -109,6 +109,7 @@ dependencies {
 test {
     finalizedBy jacocoTestReport
     useJUnitPlatform()
+    maxParallelForks = 1  // Run tests sequentially to avoid connection exhaustion
 }
 
 jacocoTestReport {
