[CCAP-1315] - allows optional customization of S3 file structure/location using confirmation code (#955)
* [CCAP-1315] - allows customization of file structure

* [CCAP-1315] - restructure user file storage and update read me

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -8,6 +8,7 @@ form-flow:
     max-file-size: '17'
     thumbnail-width: '100'
     thumbnail-height: '50'
+    prepend-short-code: false
     virus-scanning:
       enabled: true
       service-url: 'https://app-58915.on-aptible.com/clammit/scan'
