[FFB-4] Removing Mailgun from Form Flow

--- a/src/test/resources/flows-config/test-after-save-action.yaml
+++ b/src/test/resources/flows-config/test-after-save-action.yaml
@@ -1,14 +1,14 @@
 name: testFlow
 flow:
   inputs:
-    afterSaveAction: SendEmailAfterSave
+    afterSaveAction: LookupRandomSubmissionAfterSave
     nextScreens:
       - name: subflowEntry
   subflowEntry:
     nextScreens:
       - name: subflowIterationStart
   subflowIterationStart:
-    afterSaveAction: SendEmailAfterSave
+    afterSaveAction: LookupRandomSubmissionAfterSave
     subflow: income
     nextScreens:
       - name: next
