[CCAP-1629] Using flyway to manage Spring database tables

--- a/src/main/resources/application-form-flow-library.yaml
+++ b/src/main/resources/application-form-flow-library.yaml
@@ -9,6 +9,6 @@ spring:
   session:
     store-type: jdbc
     jdbc:
-      initialize-schema: always
+      initialize-schema: never
   jpa:
     open-in-view: false
