--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '3.5.0'
+    id 'org.springframework.boot' version '4.0.1'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'java-library'
     id 'maven-publish'
@@ -72,7 +72,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.jetbrains:annotations:26.0.2-1'
-    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.14.1'
+    implementation 'io.hypersistence:hypersistence-utils-hibernate-71:3.14.0'
     implementation 'org.flywaydb:flyway-core:11.20.1'
     implementation "org.flywaydb:flyway-database-postgresql:11.20.1"
     implementation 'org.webjars.npm:dropzone:5.9.3'
@@ -93,6 +93,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.junit.jupiter:junit-jupiter:6.0.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-flyway'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.jsoup:jsoup:1.22.1'
     testImplementation 'org.mockito:mockito-inline:5.2.0'
